[project]
authors = [{name = "Mayur1009", email = "mayur1009@proton.me"}]
dependencies = [
    "numpy",
    "pycuda",
    "tqdm",
]
name = "YTM"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
sources =["src"]

[tool.setuptools.package-data]
"*" = ["cuda/*.cu"]

[tool.basedpyright]
typeCheckingMode = "standard"
reportUnusedImport = false
reportMissingTypeStubs = "hint"
exclude = [
    ".pixi*",
    "data*",
]

[tool.ruff]
line-length = 120

