[project]
authors = [{name = "Mayur", email = "mayurks@uia.no"}]
dependencies = [
    "numpy",
    "pycuda",
    "tqdm",
]
name = "YTM"
requires-python = ">= 3.11"
version = "0.5.0.dev8"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
sources =["src"]

[tool.setuptools.package-data]
"*" = ["cuda/*.cu"]

[tool.basedpyright]
typeCheckingMode = "standard"
reportUnusedImport = false
reportMissingTypeStubs = "hint"
exclude = [
    "**/__pycache__*",
    "**/.*",
    "**/data*",
]

[tool.ruff]
line-length = 120

