[project]
authors = [{name = "Mayur", email = "mayurks@uia.no"}]
dependencies = [
    "numpy",
    "pycuda",
    "tqdm",
]
name = "YTM"
requires-python = ">= 3.11"
version = "0.5.1+dev1"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
sources =["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/ytm", "src/cutm", "src/pytm", "src/tm_utils"]

[tool.setuptools.package-data]
"*" = ["cuda/*.cu"]

[tool.basedpyright]
typeCheckingMode = "standard"
reportUnusedImport = false
reportMissingTypeStubs = "hint"
exclude = [
    "**/__pycache__*",
    "**/.*",
    "**/data*",
]

[tool.ruff]
line-length = 120

